<!-- <?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snc_team</name>
  <version>0.0.0</version>
  <description>Template package structure for PAR coursework</description>
  <maintainer email="your.email@student.rmit.edu.au">rescue</maintainer>
  <license>RMIT IP - Not for public release</license>

  <export>
    <build_type>ament_python</build_type>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>
  </export>
</package>
 -->

<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snc_team</name>
  <version>1.0.0</version>
  <description>SNC Team package - Search and Navigation Challenge</description>
  <maintainer email="your.email@student.rmit.edu.au">Your Name</maintainer>
  <license>RMIT IP - Not for public release</license>

  <export>
    <build_type>ament_python</build_type>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>ros2launch</exec_depend>
  </export>
</package>
